#2 created todo list

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,9 @@
     html {
         @apply text-dark-gray;
     }
+    body {
+        @apply bg-lightest-gray;
+    }
     h1 {
         @apply text-5xl;
         @apply font-bold;
