--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Zen+Kaku+Gothic+Antique:wght@300;400;700&display=swap');
+
 @tailwind base;
 
 @layer base {
@@ -6,6 +8,7 @@
     }
     body {
         @apply bg-lightest-gray;
+        @apply font-nunito;
     }
     h1 {
         @apply text-5xl;
